--- a/src/components/AnimatedLinkCard/AnimatedLinkCard.module.css
+++ b/src/components/AnimatedLinkCard/AnimatedLinkCard.module.css
@@ -1,4 +1,4 @@
-.anonymous {
+.animated-link-card {
   filter: grayscale(80%);
   opacity: 0.5;
   transition: all 0.3s;
@@ -10,12 +10,12 @@
   position: relative;
 }
 
-.anonymous:hover {
+.animated-link-card:hover {
   filter: grayscale(0%);
   opacity: 1;
 }
 
-.anonymous__text {
+.animated-link-card__text {
   bottom: 0;
   left: 0;
   background-color: #171717;
@@ -29,23 +29,23 @@
   transform: translateY(100%);
 }
 
-.anonymous img {
+.animated-link-card img {
   height: 100% !important;
   transition: all 0.3s ease-in-out;
 }
-.anonymous:hover img {
+.animated-link-card:hover img {
   height: 90% !important;
 }
-.anonymous:hover .anonymous__text {
+.animated-link-card:hover .animated-link-card__text {
   transform: translateY(0);
 }
 
 @media only screen and (max-width: 48em) {
-  .anonymous {
+  .animated-link-card {
     filter: grayscale(0%);
     opacity: 1;
   }
-  .anonymous__text {
+  .animated-link-card__text {
     transform: translateY(0);
     height: 3.5rem;
     font-size: 1.5rem;
